# localscan

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  alembic.ini  indexer.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-publish.yml
alembic/: env.py
alembic/versions/: 5e6adf8b3b02_add_token_balance_table.py  901dbd3fc1ed_update_address_balance_type.py  a42500197d58_add_custom_error_and_holders_count.py  d051d45f043f_convert_large_integers_to_strings.py  eb87305453a8_initial_schema.py  f3a1b2c4d5e6_add_contract_verification_fields.py
app/: __init__.py  cli.py  dependencies.py  main.py  schemas.py
app/db/: models.py  session.py
app/indexer/: abis.py  background.py  chain_state.py  config.py  db_service.py  parser.py  runner.py
app/routes/: addresses.py  blocks.py  blocks_views.py  contracts.py  deps.py  home.py  tokens_views.py  transactions.py  transactions_views.py  views.py
app/services/: verifier.py
app/templates/: 404.html  500.html  address.html  api_docs.html  base.html  block.html  blocks.html  contract.html  index.html  token.html  transaction.html  txs.html
tests/: test_db_service.py
