[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localscan"
version = "0.1.0"
description = "A lightweight EVM blockchain indexer and explorer"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "SQLAlchemy==2.0.46",
    "web3==7.14.0",
    "aiohttp==3.13.3",
    "websockets==15.0.1",
    "pydantic==2.12.5",
    "eth-utils==5.3.1",
    "eth-abi==5.2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
localscan = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "chain_sniper*"]

[tool.setuptools.package-data]
"app" = ["templates/**/*", "static/**/*", "static/*"]
